--- a/src/Components/Login/Login.module.css
+++ b/src/Components/Login/Login.module.css
@@ -5,5 +5,10 @@
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
+    display: flex;
+    flex-direction: column;
+}
 
+.loginForm button{
+    padding: 1rem;
 }
