--- a/src/Components/Util/SmartText.module.css
+++ b/src/Components/Util/SmartText.module.css
@@ -3,3 +3,16 @@
 .smartText{
     margin: 1rem;
 }
+
+.readMore
+{
+    background-color: #1F1E1F;
+    color: #D1D1D0;
+    border: none;
+}
+
+.readMore:hover
+{
+    color: #8202ad;
+    cursor: pointer;
+}
