--- a/src/UI/Card.module.css
+++ b/src/UI/Card.module.css
@@ -3,4 +3,6 @@
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
     border-radius: 14px;
     background-color: #1F1E1F;
+    margin: 1rem;
+    width: 35%;
   }
