--- a/src/Components/Anime/AnimeGrid.module.css
+++ b/src/Components/Anime/AnimeGrid.module.css
@@ -1,4 +1,12 @@
 
+@media only screen and (max-width:720px)
+{
+  .animeGrid{
+    max-width: 80%;
+  }
+
+}
+
 
 .animeGrid{
   margin-top: 5%;
@@ -6,7 +14,7 @@
   justify-content: center;
   color: #D1D1D0;
   align-self: center;
-  max-width: 70%;
+  max-width: 80%;
   margin-left: auto;
   margin-right: auto;
   flex-direction: row;
