--- a/src/Components/Anime/AnimeGridItem.module.css
+++ b/src/Components/Anime/AnimeGridItem.module.css
@@ -19,9 +19,10 @@
     flex-direction: row;
 }
 
-.animeInfo{
-    display: flex;
-    flex-direction: row;
+.animeInfoContainer{
+    font-size: small;
+    font-weight: 400;
+    padding-left: 1rem;
 }
 
 
@@ -30,6 +31,7 @@
     font-size: smaller;
     font-weight: 700;
     display: flex;
+    padding-bottom: 1rem;
     /* flex-grow: 1; */
     /* max-width: 50%; */
 }
@@ -43,3 +45,14 @@
     text-align: center;
 }
 
+
+.animeYear{
+    padding-left: 0.2rem;
+    font-weight: 400;
+    color: #c7c7c5;
+}
+
+.field{
+    padding: .25rem;
+    font-weight: 400;
+}
