--- a/src/UI/Card.module.css
+++ b/src/UI/Card.module.css
@@ -1,3 +1,12 @@
+
+@media only screen and (max-width:720px)
+{
+  .card{
+    width: 60% !important;
+  }
+  
+}
+
 .card {
     padding: 1rem;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
