started transition to tailwind

--- a/src/Components/Anime/AnimeGrid.module.css
+++ b/src/Components/Anime/AnimeGrid.module.css
@@ -1,5 +1,5 @@
 
-@media only screen and (max-width:720px)
+/* @media only screen and (max-width:720px)
 {
   .animeGrid{
     max-width: 80%;
@@ -24,4 +24,4 @@
 
 .animeGrid li{
   list-style: none;
-}
+} */
