--- a/src/Components/Login/Login.module.css
+++ b/src/Components/Login/Login.module.css
@@ -1,6 +1,6 @@
 
 
-.loginForm{
+/* .loginForm{
     position: absolute;
     top: 50%;
     left: 50%;
@@ -11,4 +11,4 @@
 
 .loginForm button{
     padding: 1rem;
-}
+} */
