--- a/src/Layout/Header.module.css
+++ b/src/Layout/Header.module.css
@@ -1,6 +1,6 @@
 
 
-.header{
+/* .header{
     position: fixed;
     top: 0;
     left: 0;
@@ -14,6 +14,7 @@
 .header h1{
     flex-grow: 3;
     cursor: default;
+    padding-left: 2rem;
 }
 
 
@@ -21,4 +22,4 @@
     display: flex;
     flex-direction: row;
 
-}
+} */
