--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap');
-
-
-html{
-    font-family: 'Roboto', sans-serif;
-}
-
-
-body{
-    /* background-color: #48cae4; */
-    background-color: #121313;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;  
